<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dekorasi"
            android:src="@drawable/decoration"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/text_logo"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/masuk"
            android:textSize="25sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_et"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <Button
            android:id="@+id/btnMasuk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_oren"
            android:enabled="false"
            android:fontFamily="@font/poppins"
            android:text="@string/masuk"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Belum memiliki akun?"
            android:textSize="15sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/btnMasuk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/daftar"
            android:textColor="@color/biru"
            android:textSize="15sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:onClick="showDaftarActivity"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>